<resources>
    <string name="app_name">PocketNote</string>
<color name="pink">#6f24</color>
   <string name="index"> INDEX </string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <color name="white">#ffff</color>
    <string name="newuser">NEW USER...??</string>
    <string name="title_activity_register">Register</string>
    <string name="report">REPORT</string>

    <string name="action_settings">Settings</string>
    <color name="blue">#00f</color>
 <color name="red">#ff00</color>
 <color name="yellow">#ff0</color>
    <color name="lightblue">#0ff</color>
    <string name="phoneno">PHONE NO</string>
    <string name="reenter">RE-ENTER PASSWORD</string>
    <string name="addacc">ADD ACCOUNT</string>
    <string name="title_activity_login">Login</string>
    <string name="exp">EXPENSE</string>

    <string name="hello_world">Hello world!</string>
    <string name="daily">DAILY REPORT</string>
    <string name="montly">MONTLY REPORT</string>
    <string name="yearly">YEARLY REPORT</string>
    <string name="delacc">DELETE ACCOUNT</string>
    <string name="viewacc">VIEW ACCOUNT</string>
    <string name="modacc">MODIFY ACCOUNT</string>
    <string name="id">SELECT ID</string>
    <string name="title_activity_del_acc">Del_acc</string>
    <string name="title_activity_view_acc">View_acc</string>
    <string name="money_mgmt">MONEY MANAGEMENT</string>
    <string name="savechnges">SAVE CHANGES</string>
    <string name="enc_dec">ENCRYPTION DECRYPTION</string>
    <string name="title_activity_enc_dec">Enc_dec</string>
 <string name="enc">ENCRYTION</string>
 <string name="dec">DECRYPTION</string>
    <string name="title_activity_encryption">Encryption</string>
 <string name="enter">ENTER TEXT</string>
 <string name="send">SEND ENCRYPTED TEXT</string>
    <string name="title_activity_decryption">Decryption</string>
 <string name="senddec">SEND DECRYPTED TEXT</string>
    <string name="title_activity_money_mgmt">Money_mgmt</string>
 <string name="addtran">ADD TRANSACTION</string>
 <string name="deltran">DELETE TRANSACTION</string>
 <string name="modtran">MODIFY TRANSACTION</string>
    <string name="totexp">TOTAL EXPENSE</string>
    <string name="totinc">TOTAL INCOME</string>
 <string name="viewtran">VIEW TRANSACTION</string>
    <string name="title_activity_add_tran">Add_tran</string>
 <string name="tran_type">TRANSACTION TYPE</string>
 <string name="src">SOURCE</string>
 <string name="amt">AMOUNT</string>
    <string name="accdetail">ACCOUNT DETAILS</string>
 <string name="date">DATE</string>
    <string name="title_activity_modify_tran">Modify_tran</string>
    <string name="title_activity_delete_tran">Delete_tran</string>
    <string name="title_activity_view_tran">View_tran</string>
    <string name="title_activity_daily_tran">Daily_tran</string>
    <string name="title_activity_daily_report">Daily_report</string>
    <string name="title_activity_montly_report">Montly_report</string>
    <string name="title_activity_view_daily">view_daily</string>
    <string name="title_activity_view_montly">View_montly</string>
    <string name="title_activity_yearly_report">Yearly_report</string>
    <string name="title_activity_modify_acc">Modify_acc</string>
   </resources>
