<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/rush_grass_texture_214066"
    tools:context="lf.pocketnote.Money_mgmt">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<TextView
    android:layout_width="700dp"
    android:layout_height="200dp"
    android:background="@drawable/moneymgmt1"
    />
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/logout"
        android:layout_marginTop="780dp"
        android:id="@+id/lo"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="50dp"
        android:text="@string/addtran"
        android:textSize="40dp"
        android:textStyle="bold"
        android:background="@color/yellow"
        android:id="@+id/add"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="380dp"
        android:layout_marginLeft="50dp"
        android:text="@string/modtran"
        android:textSize="40dp"
        android:textStyle="bold"
        android:background="@color/yellow"
        android:id="@+id/mod"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="50dp"
        android:text="@string/deltran"
        android:textSize="40dp"
        android:textStyle="bold"
        android:background="@color/yellow"
        android:id="@+id/del"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="680dp"
        android:layout_marginLeft="50dp"
        android:text="@string/viewtran"
        android:textSize="40dp"
        android:textStyle="bold"
        android:id="@+id/view1"
        android:background="@color/yellow"/>
</RelativeLayout>
