

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/rush_grass_texture_214066"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="lf.pocketnote.Add_tran">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="700dp"
        android:layout_height="200dp"
        android:background="@drawable/moneymgmt1"/>
    <TextView
        android:layout_width=" 200dp"
        android:layout_height="70dp"
        android:layout_marginTop="250dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="250dp"
        android:textSize="30dp"
        android:id="@+id/nm"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="330dp"
        android:text="@string/tran_type"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <Spinner
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="330dp"
        android:text="@string/exp"
        android:textSize="40dp"
        android:spinnerMode="dropdown"
        android:id="@+id/sp"
        android:background="@color/lightblue"
        ></Spinner>
    <TextView
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:layout_marginTop="410dp"
    android:text="@string/src"
        android:textColor="@color/white"
    android:textSize="30dp"
    android:textStyle="bold"/>
    <EditText
        android:id="@+id/src"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="410dp"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="490dp"
        android:text="@string/amt"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:id="@+id/textView2" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@color/white"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="490dp"
        android:layout_alignBottom="@+id/textView2"
        android:id="@+id/amt" />
    <TextView
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:layout_marginTop="570dp"
    android:text="@string/date"
        android:textColor="@color/white"
    android:textSize="30dp"
    android:textStyle="bold"/>
    <Spinner
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="570dp"
        android:background="@color/lightblue"
        android:id="@+id/day" ></Spinner>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="570dp"
        android:background="@color/lightblue"
        android:id="@+id/month" ></Spinner>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginLeft="470dp"
        android:layout_marginTop="570dp"
        android:background="@color/lightblue"
        android:id="@+id/year" ></Spinner>
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="700dp"
        android:layout_marginLeft="150dp"
        android:text="@string/addtran"
        android:textSize="30dp"
        android:textStyle="bold"
        android:background="@color/yellow"
        android:id="@+id/add"/>

</RelativeLayout>
