

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bk15"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="lf.pocketnote.Del_acc">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="700dp"
        android:layout_height="150dp"
        android:background="@drawable/logonew"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/username"
        android:textSize="35dp"
        android:layout_marginTop="250dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="200dp"
        android:id="@+id/uname"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:text="@string/password"
        android:textSize="35dp"
        android:layout_marginTop="350dp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="325dp"
        android:layout_marginLeft="200dp"
        android:id="@+id/pass2"/>
    <Button
        android:layout_width="500dp"
        android:layout_height="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="35dp"
        android:text="@string/delacc"
        android:textSize="50dp"
        android:id="@+id/delac"
        />

</RelativeLayout>
