<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bk11"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="lf.pocketnote.View_acc">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="700dp"
        android:layout_height="150dp" 
        android:background="@drawable/logonew"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="200dp"
        android:text="@string/accdetail"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40dp"

        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textColor="@color/white"
        android:text="@string/username"
        android:layout_marginTop="350dp"
        android:textSize="35dp"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="330dp"
        android:id="@+id/uname"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:textColor="@color/white"
        android:text="@string/phoneno"
        android:layout_marginTop="440dp"
        android:textSize="35dp"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="440dp"
        android:id="@+id/ph"
        android:textSize="40dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

</RelativeLayout>
