<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bk12"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="lf.pocketnote.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/logonew"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textSize="30dp"
        android:text="@string/addacc"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="180dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/white"
        android:textSize="25dp"

        android:text="@string/username"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="225dp"
        android:background="@color/white"
        android:id="@+id/uname"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="330dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:text="@string/password"
        android:id="@+id/textView" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="305dp"
        android:background="@color/white"
        android:id="@+id/pass"
        />
    <TextView
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="410dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:text="@string/reenter"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="385dp"
        android:layout_marginLeft="250dp"
        android:background="@color/white"
        android:id="@+id/cnfrmpass"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="490dp"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:text="@string/phoneno"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="465dp"
        android:background="@color/white"
        android:id="@+id/phone"
        />
    <ImageButton
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="590dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/reg"
        android:id="@+id/reg"/>

</RelativeLayout>
