

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bk4"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    tools:context="lf.pocketnote.Encryption">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:text="@string/enter"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_marginLeft="130dp"/>
    <EditText
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:id="@+id/edit"/>
    <ImageButton
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="130dp"
        android:background="@drawable/encryption"
        android:id="@+id/e1"/>
    <EditText
        android:layout_width="700dp"
        android:layout_height="100dp"
        android:layout_marginTop="450dp"
        android:background="@color/white"
        android:id="@+id/view"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/phoneno"
        android:textSize="40dp"
        android:textColor="@color/red"
        android:layout_marginTop="620dp"/>
    <EditText
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="250dp"
        android:background="@color/white"
        android:id="@+id/ph"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="750dp"
        android:layout_marginLeft="130dp"
        android:text="@string/send"
        android:textSize="25dp"
        android:background="@color/yellow"
        android:id="@+id/send"/>

</RelativeLayout>
