<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/rush_grass_texture_214066"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    tools:context="lf.pocketnote.view_daily">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:background="@color/white"
        android:text="@string/totexp"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="110dp"
        android:background="@color/lightblue"
        android:id="@+id/exp"/>
    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:layout_marginLeft="330dp"
        android:background="@color/white"
        android:text="@string/totinc"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginLeft="440dp"
        android:background="@color/lightblue"
        android:id="@+id/inc"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="@color/lightblue"
        android:id="@+id/lv">

    </ListView>

</RelativeLayout>
