

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bk4"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="lf.pocketnote.Enc_dec">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageButton
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/bk3"
        android:id="@+id/enc"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="150dp"
        android:text="@string/enc"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textColor="@color/white"
        />
<ImageButton
    android:layout_width="400dp"
    android:layout_height="200dp"
    android:layout_marginLeft="75dp"
    android:layout_marginTop="400dp"
    android:background="@drawable/decrypt"
    android:id="@+id/dec"/>
    <TextView
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="600dp"
        android:layout_marginLeft="150dp"
        android:text="@string/dec"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:textStyle="bold"/>
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/logout"
            android:layout_marginTop="750dp"
            android:id="@+id/lo"/>
</RelativeLayout>