

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"
    android:background="@drawable/rush_grass_texture_214066"
    tools:context="lf.pocketnote.Delete_tran">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="700dp"
        android:layout_height="200dp"
        android:background="@drawable/moneymgmt1"/>
    <TextView
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:text="@string/id"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="170dp"
        android:textStyle="bold"
        android:textColor="@color/yellow"/>
    <Spinner
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="330dp"
        android:layout_marginLeft="50dp"
        android:background="@color/white"
        android:id="@+id/sp1"></Spinner>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/viewtran"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="330dp"
        android:id="@+id/vt"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="120dp"
        android:background="@color/lightblue"
        android:id="@+id/type1"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="120dp"
        android:background="@color/lightblue"
        android:id="@+id/src1"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="570dp"
        android:layout_marginLeft="120dp"
        android:background="@color/lightblue"
        android:id="@+id/amt1"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="640dp"
        android:layout_marginLeft="120dp"
        android:background="@color/lightblue"
        android:id="@+id/date1"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:id="@+id/sc"
        android:text="@string/deltran"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="720dp"/>

</RelativeLayout>
