<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/bk12"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="stateHidden"

    >
<TextView
    android:layout_width="350dp"
    android:layout_height="70dp"
    android:layout_marginTop="200dp"
    android:layout_marginLeft="100dp"
    android:background="@drawable/log"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="350dp"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:text="@string/username"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="350dp"
        android:background="@color/white"
        android:id="@+id/name"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="450dp"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:text="@string/password"
        android:textStyle="bold"
        android:id="@+id/textView" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="450dp"
        android:background="@color/white"
        android:id="@+id/pass1"
    />
    <ImageButton
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="580dp"
        android:background="@drawable/logi"
        android:id="@+id/login"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/logonew"
    />
    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="700dp"
        android:textColor="@color/white"
        android:text="@string/newuser"
        android:textStyle="bold"
        android:textSize="40dp"/>
    <ImageButton
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="700dp"
        android:background="@drawable/reg"
        android:id="@+id/register"
        /></RelativeLayout>
